Configurable API Host

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,10 @@
 
     </div>
 
+    <script>
+      window.PIPES_API_HOST = '<!-- @echo API_HOST -->';
+    </script>
+
     <script src="scripts/vendor.js"></script>
     <script src="scripts/templates.js"></script>
     <script src="scripts/app.js"></script>
